# paddle-reader

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.docs/: DEV.md
.docs/API/: API 配额规则和错误码说明.md  PaddleOCR-VL-1.5_API.md  异步API使用文档.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: App.tsx  globals.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  error.rs  images.rs  lib.rs  main.rs  ocr_client.rs  settings.rs
src/components/layout/: TitleBar.tsx
src/components/settings/: SettingsPage.tsx
src/components/sidebar/: SessionItem.tsx  Sidebar.tsx
src/components/theme/: ThemeProvider.tsx
src/components/ui/: scroll-area.tsx  sonner.tsx
src/components/workspace/: Workspace.tsx
src/components/workspace/attachments/: AttachmentRow.tsx  AttachmentsPanel.tsx  BatchGroup.tsx  BatchList.tsx  ClipboardPaste.tsx  UploadForm.tsx
src/components/workspace/text/: BatchTextList.tsx  MarkdownBlock.tsx  TextPanel.tsx
src/hooks/: useUpload.ts
src/lib/: assets.ts  db.ts  ocr.ts  store.ts  types.ts
src/state/: SessionContext.tsx
